syntax = "proto3";
package fitglue;

import "google/protobuf/timestamp.proto";
import "standardized_activity.proto";

option go_package = "github.com/ripixel/fitglue-server/src/go/pkg/types/pb";

message UserRecord {
  string user_id = 1;
  google.protobuf.Timestamp created_at = 2;
  UserIntegrations integrations = 3;
  // Pipelines define the data flow: Source -> Enrichers -> Routing
  repeated PipelineConfig pipelines = 4;
  repeated string fcm_tokens = 5;
}

message PipelineConfig {
  string id = 1; // Unique ID (uuid) for tracing
  string source = 2; // e.g. "SOURCE_HEVY"
  repeated EnricherConfig enrichers = 3;
  repeated string destinations = 4; // e.g. ["strava", "gcs"]
}

message UserIntegrations {
  HevyIntegration hevy = 1;
  FitbitIntegration fitbit = 2;
  StravaIntegration strava = 3;
}


message HevyIntegration {
  bool enabled = 1;
  string api_key = 2;
  string user_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp last_used_at = 5;
}

message FitbitIntegration {
    bool enabled = 1;
    string access_token = 2;
    string refresh_token = 3;
    google.protobuf.Timestamp expires_at = 4;
    string fitbit_user_id = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp last_used_at = 7;
}

message SourceEnrichmentConfig {
  repeated EnricherConfig enrichers = 1;
}

message EnricherConfig {
  // Use strictly typed provider enum instead of string name
  EnricherProviderType provider_type = 1;
  map<string, string> inputs = 2;
}

enum EnricherProviderType {
  ENRICHER_PROVIDER_UNSPECIFIED = 0;
  ENRICHER_PROVIDER_FITBIT_HEART_RATE = 1;
  // Config inputs: "format" (compact/detailed/verbose), "show_stats" ("true"/"false")
  ENRICHER_PROVIDER_WORKOUT_SUMMARY = 2;
  ENRICHER_PROVIDER_MUSCLE_HEATMAP = 3;
  ENRICHER_PROVIDER_SOURCE_LINK = 4;
  ENRICHER_PROVIDER_METADATA_PASSTHROUGH = 5;
  ENRICHER_PROVIDER_VIRTUAL_GPS = 6;
  ENRICHER_PROVIDER_TYPE_MAPPER = 7;
  ENRICHER_PROVIDER_PARKRUN = 8;
  ENRICHER_PROVIDER_CONDITION_MATCHER = 9;
  ENRICHER_PROVIDER_AUTO_INCREMENT = 10;
  ENRICHER_PROVIDER_USER_INPUT = 11;
  ENRICHER_PROVIDER_MOCK = 99;
}

// Workout Summary format styles
enum WorkoutSummaryFormat {
  WORKOUT_SUMMARY_FORMAT_UNSPECIFIED = 0;
  WORKOUT_SUMMARY_FORMAT_COMPACT = 1;     // "4Ã—8@100kg"
  WORKOUT_SUMMARY_FORMAT_DETAILED = 2;    // "4 sets Ã— 8 reps @ 100.0kg"
  WORKOUT_SUMMARY_FORMAT_VERBOSE = 3;     // "4 sets of 8 reps at 100.0 kilograms"
}

// Muscle Heatmap visualization styles
enum MuscleHeatmapStyle {
  MUSCLE_HEATMAP_STYLE_UNSPECIFIED = 0;
  MUSCLE_HEATMAP_STYLE_EMOJI_BARS = 1;    // "ðŸŸªðŸŸªðŸŸªâ¬œâ¬œ"
  MUSCLE_HEATMAP_STYLE_PERCENTAGE = 2;    // "Chest: 80%"
  MUSCLE_HEATMAP_STYLE_TEXT_ONLY = 3;     // "High: Chest, Medium: Legs"
}

// Muscle Heatmap coefficient presets
enum MuscleHeatmapPreset {
  MUSCLE_HEATMAP_PRESET_UNSPECIFIED = 0;
  MUSCLE_HEATMAP_PRESET_STANDARD = 1;      // Balanced coefficients
  MUSCLE_HEATMAP_PRESET_POWERLIFTING = 2;  // Emphasize compounds
  MUSCLE_HEATMAP_PRESET_BODYBUILDING = 3;  // Emphasize isolation
}

// Virtual GPS route options
enum VirtualGPSRoute {
  VIRTUAL_GPS_ROUTE_UNSPECIFIED = 0;
  VIRTUAL_GPS_ROUTE_LONDON = 1;      // London Hyde Park (~4km)
  VIRTUAL_GPS_ROUTE_NYC = 2;         // NYC Central Park (~10km)
}

message StravaIntegration {
    bool enabled = 1;
    string access_token = 2;
    string refresh_token = 3;
    google.protobuf.Timestamp expires_at = 4;
    int64 athlete_id = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp last_used_at = 7;
}

message ProcessedActivityRecord {
  string source = 1;
  string external_id = 2; // Unique ID from provider
  google.protobuf.Timestamp processed_at = 3;
}

message Counter {
  string id = 1; // Key, e.g. "parkrun_bushy"
  int64 count = 2;
  google.protobuf.Timestamp last_updated = 3;
}

message SynchronizedActivity {
  string activity_id = 1;
  string title = 2;
  string description = 3;
  ActivityType type = 4;
  string source = 5; // e.g. "SOURCE_HEVY"
  google.protobuf.Timestamp start_time = 6;
  map<string, string> destinations = 7; // destination -> external_id
  google.protobuf.Timestamp synced_at = 8;
  string pipeline_id = 9;
  string pipeline_execution_id = 10;
}
